@@ -30,11 +30,21 @@ public class CollectionController {
     }
 
     @GetMapping()
-    public ResponseEntity<List<CollectionDto>> getCollection(){
+    public ResponseEntity<List<CollectionDto>> getCollections(){
         try{
             List<CollectionDto> collections = collectionService.getCollections().stream().map(CollectionMapper::mapModelToDto).toList();
             return ResponseEntity.ok(collections);
         }catch (Exception e){
+            return ResponseEntity.internalServerError().build();
+        }
+    }
+
+    @GetMapping("/public")
+    public ResponseEntity<List<CollectionDto>> getPublicCollections() {
+        try {
+            List<CollectionDto> collections = collectionService.getPublicCollections().stream().map(CollectionMapper::mapModelToDto).toList();
+            return ResponseEntity.ok(collections);
+        } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
         }
     }
@@ -86,7 +96,7 @@ public class CollectionController {
         try {
             if(newItem.getLabel() == null || newItem.getLabel().isEmpty() || newItem.getLabel().length() > 50 || newItem.getObtentionDate() == null) return ResponseEntity.badRequest().build();
             ItemModel item = ItemMapper.mapCreationDtoToCreationModel(newItem);
-            ItemModel res = collectionService.saveItem(collectionId, item, newItem.getProperties().stream().map(ItemPropertyMapper::mapCreationDtoToCreationModel).collect(Collectors.toList()));
+            ItemModel res = collectionService.saveItem(collectionId, item, newItem.getProperties().stream().map(ItemPropertyMapper::mapCreationDtoToCreationModel).toList());
             return ResponseEntity.created(URI.create("/collections/" + collectionId + "/items/" + res.getId())).body(ItemMapper.mapModelToDto(res));
         } catch (NotFoundException e) {
             return ResponseEntity.notFound().build();
